force-app/main/default/objects/Lead/fields/OperadoraSaude2__c.field-meta.xml
<CustomField>
    <fullName>OperadoraSaude2__c</fullName>
    <label>Qual operadora de saúde 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amil</fullName>
            </value>
            <value>
                <fullName>Bradesco</fullName>
            </value>
            <value>
                <fullName>Hapivida</fullName>
            </value>
            <value>
                <fullName>Notredame</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Promed</fullName>
            </value>
            <value>
                <fullName>Samp</fullName>
            </value>
            <value>
                <fullName>Saúde Sistema</fullName>
            </value>
            <value>
                <fullName>Sulamérica</fullName>
            </value>
            <value>
                <fullName>Unimed-BH</fullName>
            </value>
            <value>
                <fullName>Unimed CO-Irmã</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>