force-app/main/default/objects/Lead/fields/OperadoraSaude__c.field-meta.xml
<CustomField>
    <fullName>OperadoraSaude__c</fullName>
    <label>Qual a operadora de saúde?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amil</fullName>
            </value>
            <value>
                <fullName>Bradesco</fullName>
            </value>
            <value>
                <fullName>Hapivida</fullName>
            </value>
            <value>
                <fullName>Notredame</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Promed</fullName>
            </value>
            <value>
                <fullName>Samp</fullName>
            </value>
            <value>
                <fullName>Saúde Sistema</fullName>
            </value>
            <value>
                <fullName>Sulamérica</fullName>
            </value>
            <value>
                <fullName>Unimed CO- Irmã</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Unimed-BH</fullName>
            </value>
            <value>
                <fullName>Alta Gestão</fullName>
                <isActive>false</isActive>
                <label>Alta Gestão</label>
            </value>
            <value>
                <fullName>Autogestão</fullName>
                <isActive>false</isActive>
                <label>Autogestão</label>
            </value>
            <value>
                <fullName>CNU</fullName>
                <isActive>false</isActive>
                <label>CNU</label>
            </value>
            <value>
                <fullName>Golden Cross</fullName>
                <isActive>false</isActive>
                <label>Golden Cross</label>
            </value>
            <value>
                <fullName>Hapvida</fullName>
                <isActive>false</isActive>
                <label>Hapvida</label>
            </value>
            <value>
                <fullName>Plano de alta gestão</fullName>
                <isActive>false</isActive>
                <label>Plano de alta gestão</label>
            </value>
            <value>
                <fullName>Sistema Unimed</fullName>
                <isActive>false</isActive>
                <label>Sistema Unimed</label>
            </value>
            <value>
                <fullName>Vitallis</fullName>
                <isActive>false</isActive>
                <label>Vitallis</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>