force-app/main/default/objects/Lead/fields/OPORTUNIDADE__c.field-meta.xml
<CustomField>
    <fullName>OPORTUNIDADE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>