force-app/main/default/objects/Lead/fields/OrigemLeadAux__c.field-meta.xml
<CustomField>
    <fullName>OrigemLeadAux__c</fullName>
    <formula>IF(OrigemWebToLead__c = &quot;bemdigital.unimedbh.com.br&quot;,&quot;BEM DIGITAL&quot;,
 IF(CONTAINS(OrigemWebToLead__c, &quot;conecta&quot;),&quot;PAGINA DE PLANOS&quot;,
				IF(CONTAINS(OrigemWebToLead__c,&quot;historias&quot;),&quot;HISTORIAS&quot;,
							IF(CONTAINS(OrigemWebToLead__c,&quot;planos&quot;),&quot;PAGINA DE PLANOS&quot;,
										IF(CONTAINS(OrigemWebToLead__c,&quot;portal&quot;),&quot;PORTAL&quot;,
													IF(CONTAINS(OrigemWebToLead__c,&quot;INDICACAO&quot;),&quot;PAGINA DE PLANOS&quot;,
																IF(CONTAINS(OrigemWebToLead__c,&quot;sim&quot;),&quot;PAGINA DE PLANOS&quot;,NULL))
												
										)
		    )
    )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origem do Lead Auxiliar</label>
    <type>Text</type>
</CustomField>