force-app/main/default/objects/Lead/fields/OrigemLeadHubSpot__c.field-meta.xml
<CustomField>
    <fullName>OrigemLeadHubSpot__c</fullName>
    <description>Forma como o lead teve seu primeiro contato com a Unimed-BH, mas apenas quando a informação vier do HubSpot</description>
    <label>Origem do Lead HubSpot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ORGANIC_SEARCH</fullName>
                <label>Pesquisa orgânica</label>
            </value>
            <value>
                <fullName>PAID_SEARCH</fullName>
                <label>Pesquisa paga</label>
            </value>
            <value>
                <fullName>SOCIAL_MEDIA</fullName>
                <label>Social Orgânico</label>
            </value>
            <value>
                <fullName>PAID_SOCIAL</fullName>
                <label>Social Pago</label>
            </value>
            <value>
                <fullName>OFFLINE</fullName>
                <label>Fontes off-line</label>
            </value>
            <value>
                <fullName>DIRECT_TRAFFIC</fullName>
                <label>Tráfego direto</label>
            </value>
            <value>
                <fullName>EMAIL_MARKETING</fullName>
                <label>E-mail marketing</label>
            </value>
            <value>
                <fullName>REFERRALS</fullName>
                <label>Referências</label>
            </value>
            <value>
                <fullName>OTHER_CAMPAIGNS</fullName>
                <label>Outras campanhas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>