force-app/main/default/objects/Lead/fields/OrigemWebToLead__c.field-meta.xml
<CustomField>
    <fullName>OrigemWebToLead__c</fullName>
    <description>URL de páginas externas acessadas pelo lead</description>
    <label>URL de Conversão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>