force-app/main/default/objects/Lead/fields/PapelConsultor__c.field-meta.xml
<CustomField>
    <fullName>PapelConsultor__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Papel do consultor</label>
    <type>Text</type>
</CustomField>