force-app/main/default/objects/Lead/fields/Pepita__c.field-meta.xml
<CustomField>
    <fullName>Pepita__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pepita são empresas mais estratégicas que envolvem a superintendência. Geralmente são empresas com mais de 300 vidas, mas existe outros critérios para definir se uma empresa tem o atributo &quot;Pepita&quot;, sendo estes critérios definidos pelo comercial.</description>
    <label>Pepita</label>
    <type>Checkbox</type>
</CustomField>