force-app/main/default/objects/Lead/fields/PerfilProprietario__c.field-meta.xml
<CustomField>
    <fullName>PerfilProprietario__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfil do proprietário</label>
    <type>Text</type>
</CustomField>