force-app/main/default/objects/Lead/fields/PesquisaEnviada__c.field-meta.xml
<CustomField>
    <fullName>PesquisaEnviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pesquisa Enviada?</label>
    <type>Checkbox</type>
</CustomField>