force-app/main/default/objects/Lead/fields/PessoaFisica__c.field-meta.xml
<CustomField>
    <fullName>PessoaFisica__c</fullName>
    <formula>NOT(CONTAINS(TipoAtendimento__c, &apos;Jurídica&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>É pessoa física?</label>
    <type>Checkbox</type>
</CustomField>