force-app/main/default/objects/Lead/fields/PessoaJuridica__c.field-meta.xml
<CustomField>
    <fullName>PessoaJuridica__c</fullName>
    <formula>CONTAINS(TipoAtendimento__c, &apos;Jurídica&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>É pessoa jurídica?</label>
    <type>Checkbox</type>
</CustomField>