force-app/main/default/objects/Lead/fields/Plano__c.field-meta.xml
<CustomField>
    <fullName>Plano__c</fullName>
    <label>Plano</label>
    <length>255</length>
    <type>Text</type>
</CustomField>