force-app/main/default/objects/Lead/fields/PlanoAtualPais__c.field-meta.xml
<CustomField>
    <fullName>PlanoAtualPais__c</fullName>
    <label>Plano atual dos pais</label>
    <length>255</length>
    <type>Text</type>
</CustomField>