force-app/main/default/objects/Lead/fields/PlanoParaVoce__c.field-meta.xml
<CustomField>
    <fullName>PlanoParaVoce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O plano é para você?</label>
    <type>Checkbox</type>
</CustomField>