force-app/main/default/objects/Lead/fields/PlanoSimulacao__c.field-meta.xml
<CustomField>
    <fullName>PlanoSimulacao__c</fullName>
    <label>Plano Simulação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>