force-app/main/default/objects/Lead/fields/PlanPicklist__c.field-meta.xml
<CustomField>
    <fullName>PlanPicklist__c</fullName>
    <label>Plano</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusivo Odonto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>