force-app/main/default/objects/Lead/fields/PontoReferencia__c.field-meta.xml
<CustomField>
    <fullName>PontoReferencia__c</fullName>
    <label>Ponto de referência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>