force-app/main/default/objects/Lead/fields/Porte__c.field-meta.xml
<CustomField>
    <fullName>Porte__c</fullName>
    <formula>IF(RecordType.Name = &apos;Pessoa Física&apos; || RecordType.Name = &apos;Pessoa Física RN&apos; || RecordType.Name = &apos;Médico Cooperado&apos;,&apos;Individual&apos;,IF(AND(NumeroVidas__c + QtdeVidasTransferencia__c &lt;= 29, RecordType.Name = &apos;Pessoa Jurídica&apos; || RecordType.Name = &apos;Pessoa Jurídica - Enterprise&apos; ), &apos;PME1&apos;,IF(NumeroVidas__c + QtdeVidasTransferencia__c &lt;= 99, &apos;PME2&apos;,IF(NumeroVidas__c + QtdeVidasTransferencia__c &lt;= 300, &apos;ME&apos;,IF(NumeroVidas__c + QtdeVidasTransferencia__c &lt;= 600, &apos;GC&apos;,IF(NumeroVidas__c + QtdeVidasTransferencia__c &gt; 600, &apos;CE&apos;,&apos;&apos;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porte</label>
    <type>Text</type>
</CustomField>