force-app/main/default/objects/Lead/fields/PossuiPlano__c.field-meta.xml
<CustomField>
    <fullName>PossuiPlano__c</fullName>
    <label>Possui plano ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>