force-app/main/default/objects/Lead/fields/PreferenciaContato__c.field-meta.xml
<CustomField>
    <fullName>PreferenciaContato__c</fullName>
    <description>Informa se o cliente prefere contato por telefone ou whatsapp. Utilizado nas páginas de levantada de mão.</description>
    <label>Preferência de Contato</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telefone</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Ligação telefônica</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>