force-app/main/default/objects/Lead/fields/ProbabilidadeFechamento__c.field-meta.xml
<CustomField>
    <fullName>ProbabilidadeFechamento__c</fullName>
    <description>Detalhamento da probabilidade de fechamento</description>
    <label>Probabilidade de fechamento</label>
    <length>200</length>
    <type>Text</type>
</CustomField>