force-app/main/default/objects/Lead/fields/ProdutosPreco__c.field-meta.xml
<CustomField>
    <fullName>ProdutosPreco__c</fullName>
    <label>Produtos cotados / preço</label>
    <length>100</length>
    <type>Text</type>
</CustomField>