force-app/main/default/objects/Lead/fields/proprier_rio_do_lead_dashboard__c.field-meta.xml
<CustomField>
    <fullName>proprier_rio_do_lead_dashboard__c</fullName>
    <formula>Owner:User.FirstName&amp;&apos; &apos;&amp;Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>proprierário do lead dashboard</label>
    <type>Text</type>
</CustomField>