force-app/main/default/objects/Lead/fields/ProprietarioOriginal__c.field-meta.xml
<CustomField>
    <fullName>ProprietarioOriginal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietário Original</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>