force-app/main/default/objects/Lead/fields/ProtecaoFamiliar__c.field-meta.xml
<CustomField>
    <fullName>ProtecaoFamiliar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proteção Familiar</label>
    <type>Checkbox</type>
</CustomField>