force-app/main/default/objects/Lead/fields/QtdeOdontoExclusivoOdonto__c.field-meta.xml
<CustomField>
    <fullName>QtdeOdontoExclusivoOdonto__c</fullName>
    <label>Quantidade de Vidas no Exclusivo Odonto</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>