force-app/main/default/objects/Lead/fields/QtdeVidasTransferencia__c.field-meta.xml
<CustomField>
    <fullName>QtdeVidasTransferencia__c</fullName>
    <description>Quantidade de vidas que são considerados como transferência.</description>
    <label>Quantidade de Vidas Transferência</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>