force-app/main/default/objects/Lead/fields/QuantidadeFuncionarios__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeFuncionarios__c</fullName>
    <label>Quantidade de funcionários</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>