force-app/main/default/objects/Lead/fields/ServicosAdicionais__c.field-meta.xml
<CustomField>
    <fullName>ServicosAdicionais__c</fullName>
    <label>Serviços adicionais</label>
    <length>255</length>
    <type>Text</type>
</CustomField>