force-app/main/default/objects/Lead/fields/SinistralidadeAtual__c.field-meta.xml
<CustomField>
    <fullName>SinistralidadeAtual__c</fullName>
    <label>Sinistralidade atual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>