force-app/main/default/objects/Lead/fields/Situacao__c.field-meta.xml
<CustomField>
    <fullName>Situacao__c</fullName>
    <label>Situação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>