force-app/main/default/objects/Lead/fields/STATUS_DO_LEAD_EM_TEXTO_FORMULA__c.field-meta.xml
<CustomField>
    <fullName>STATUS_DO_LEAD_EM_TEXTO_FORMULA__c</fullName>
    <formula>TEXT( Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STATUS DO LEAD EM TEXTO FORMULA</label>
    <type>Text</type>
</CustomField>