force-app/main/default/objects/Lead/fields/Supervisao__c.field-meta.xml
<CustomField>
    <fullName>Supervisao__c</fullName>
    <formula>Meta__r.Supervisao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisão</label>
    <type>Text</type>
</CustomField>