force-app/main/default/objects/Lead/fields/TempoLeadPerdido__c.field-meta.xml
<CustomField>
    <fullName>TempoLeadPerdido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caso o lead esteja com status perdido a X tempo o campo é marcado como true. Este campo é necessário para as jorandas de lead perdido.</description>
    <label>Tempo Lead Perdido</label>
    <type>Checkbox</type>
</CustomField>