force-app/main/default/objects/Lead/fields/TipoAtendimento__c.field-meta.xml
<CustomField>
    <fullName>TipoAtendimento__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Atendimento</label>
    <type>Text</type>
</CustomField>