force-app/main/default/objects/Lead/fields/TipoBeneficiario__c.field-meta.xml
<CustomField>
    <fullName>TipoBeneficiario__c</fullName>
    <label>Tipo de beneficiário</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Titular</fullName>
            </value>
            <value>
                <fullName>Dependente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>