force-app/main/default/objects/Lead/fields/TipoCliente__c.field-meta.xml
<CustomField>
    <fullName>TipoCliente__c</fullName>
    <label>Tipo de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admissão (Novo)</fullName>
            </value>
            <value>
                <fullName>Transferência</fullName>
            </value>
            <value>
                <fullName>Inclusão de dependente</fullName>
            </value>
            <value>
                <fullName>Inclusão de módulo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>