force-app/main/default/objects/Lead/fields/TipoInclusaoModulo__c.field-meta.xml
<CustomField>
    <fullName>TipoInclusaoModulo__c</fullName>
    <label>Tipo de inclusão módulo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>