force-app/main/default/objects/Lead/fields/vidas_convertidas__c.field-meta.xml
<CustomField>
    <fullName>vidas_convertidas__c</fullName>
    <formula>if(ISPICKVAL(Status, &apos;Convertido&apos;), NumeroVidas__c ,0)</formula>
    <label>vidas convertidas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>