force-app/main/default/objects/Lead/fields/Vidas_do_grupo_na_Unimed_BH__c.field-meta.xml
<CustomField>
    <fullName>Vidas_do_grupo_na_Unimed_BH__c</fullName>
    <label>Vidas do grupo na Unimed-BH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>