force-app/main/default/objects/Lead/fields/vidas_Transfer_ncias_convertidas__c.field-meta.xml
<CustomField>
    <fullName>vidas_Transfer_ncias_convertidas__c</fullName>
    <formula>if(ISPICKVAL(Status, &apos;Lead perdido&apos;), NumeroVidas__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>vidas Transferências convertidas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>