force-app/main/default/objects/Lead/recordTypes/MedicoCooperado.recordType-meta.xml
<RecordType>
    <fullName>MedicoCooperado</fullName>
    <active>true</active>
    <businessProcess>Varejo</businessProcess>
    <label>Médico Cooperado</label>
</RecordType>