force-app/main/default/objects/Lead/recordTypes/PessoaFisica.recordType-meta.xml
<RecordType>
    <fullName>PessoaFisica</fullName>
    <active>true</active>
    <businessProcess>Varejo</businessProcess>
    <label>Pessoa Física</label>
</RecordType>