force-app/main/default/objects/Lead/recordTypes/PessoaFisicaRN.recordType-meta.xml
<RecordType>
    <fullName>PessoaFisicaRN</fullName>
    <active>true</active>
    <businessProcess>Varejo</businessProcess>
    <label>Pessoa Física RN</label>
</RecordType>